--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,2 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  div {
-    border: 2px solid rgb(105, 200, 255);
-  }
-}
+@import '~antd/dist/antd.css';
+
