--- a/src/containers/login/index.scss
+++ b/src/containers/login/index.scss
@@ -1,6 +1,7 @@
 .login-card {
   margin: auto !important;
   margin-top: 3em !important;
+  margin-bottom: 3em !important;
   .title {
     margin-top: 18px;
     margin-bottom: 32px;
