--- a/src/containers/register/index.scss
+++ b/src/containers/register/index.scss
@@ -2,6 +2,7 @@
   max-width: 500px;
   margin: auto !important;
   margin-top: 2em !important;
+  margin-bottom: 2em !important;
   .title {
     margin-top: 28px;
     margin-bottom: 35px;
